syntax = "proto3";
package palomachain.paloma.gravity;

import "gogoproto/gogo.proto";
import "palomachain/paloma/gravity/bridge_transfer_limit.proto";

option go_package = "github.com/palomachain/paloma/x/gravity/types";

message SetBridgeTransferLimitProposal {
  string title = 1;
  string description = 2;
  string token = 3;
  string limit = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  LimitPeriod limit_period = 5;
  repeated string exempt_addresses = 6;
}
